--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,5 +21,5 @@ dev = [
     "pip>=25.1.1"
 ]
 
-[tool.setuptools]
-py-modules = ["gemini", "StoryTime"]
+[project.scripts]
+storytime = "storytime.StoryTime:main"
