--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,8 @@ exclude = ["data*", "tests*"]
 [tool.ruff]
 target-version = "py312"
 line-length = 88
+
+[tool.ruff.lint]
 select = [
     "E",  # pycodestyle errors
     "W",  # pycodestyle warnings
