Improve pre-commit consistency by using Makefile
- Replace direct ruff calls with 'make lint' target
- Ensures consistent tooling between developers and CI
- Single source of truth for linting configuration
- Better virtual environment management
- Easier to extend with additional tools in the future

Benefits:
- Developers use same commands as pre-commit hooks
- All linting logic centralized in Makefile
- Virtual environment handled properly
- Consistent behavior across all environments

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,9 @@
 repos:
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.1.6
+  - repo: local
     hooks:
-      - id: ruff
-        args: [--fix]
-      - id: ruff-format
+      - id: make-lint
+        name: Lint with Makefile
+        entry: make lint
+        language: system
+        types: [python]
+        pass_filenames: false
