--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
 dev = [
     "pytest>=8.2.0",
     "ruff>=0.12.1",
+    "mypy>=1.8.0",
     "pre-commit>=3.6.0",
     "pip>=25.1.1"
 ]
@@ -64,3 +65,38 @@ testpaths = ["tests"]
 python_files = "test_*.py"
 python_classes = "Test*"
 python_functions = "test_*"
+
+[tool.mypy]
+python_version = "3.12"
+warn_return_any = true
+warn_unused_configs = true
+# Start with basic checks, can be made stricter later
+disallow_untyped_defs = false
+disallow_incomplete_defs = false
+check_untyped_defs = true
+disallow_untyped_decorators = false
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_no_return = true
+warn_unreachable = true
+strict_equality = true
+show_error_codes = true
+
+# Ignore third-party libraries without type stubs
+[[tool.mypy.overrides]]
+module = [
+    "google.*",
+    "textual.*",
+    "PIL.*",
+]
+ignore_missing_imports = true
+
+# Allow gradual adoption for tests
+[[tool.mypy.overrides]]
+module = [
+    "tests.*",
+]
+disallow_untyped_defs = false
+disallow_incomplete_defs = false
+ignore_errors = false
