feat: unify CLI and TUI into single storytime command
- Remove separate storytime-cli command in favor of unified storytime
- Move all CLI commands (story, image) from StoryCLI.py to StoryTime.py
- Add new 'tui' subcommand to launch interactive interface
- Update pyproject.toml to use single entry point: storytime
- Update README.md documentation to reflect new command structure
- Maintain backward compatibility for all existing functionality
- Update tests to use unified command structure

BREAKING CHANGE: storytime-cli command removed, use storytime instead

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,8 +27,7 @@ dev = [
 ]
 
 [project.scripts]
-storytime = "storytime.StoryTime:main"
-storytime-cli = "storytime.StoryCLI:app"
+storytime = "storytime.StoryTime:app"
 
 [build-system]
 requires = ["setuptools>=45", "wheel"]
