feat(cli): add default prompt passthrough and image prompt split
- Allow running `storyforge` or `sf` with a prompt argument to invoke the
  story command directly, using default options.
- Add `generate_image_prompt` abstract method to LLMBackend and implement
  in GeminiBackend to split stories into detailed image prompts for
  illustration generation.
- Refactor image generation flow to prepare for multi-paragraph
  illustration support.
- Remove "random" as a valid value for learning_focus and update prompt
  validation accordingly.
- Add utility to load stories from file for testing.
- Update .gitignore for context/ and junk files.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dev = [
 
 [project.scripts]
 storyforge = "storyforge.StoryForge:app"
+sf = "storyforge.StoryForge:app"
 
 [build-system]
 requires = ["setuptools>=45", "wheel"]
