--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
     "google-genai>=1.23.0",
+    "anthropic>=0.28.0",
     "pillow>=11.2.1",
     "textual[syntax]>=0.54.1",
     "textual-dev>=0.00.1",
