--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,8 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "pytest>=8.2.0",
+    "pytest-cov>=4.1.0",
+    "coverage>=7.5.0",
     "ruff>=0.12.1",
     "mypy>=1.8.0",
     "pre-commit>=3.6.0",
