--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,8 +60,8 @@ dev = [
 ]
 
 [project.scripts]
-storyforge = "storyforge.StoryForge:app"
-sf = "storyforge.StoryForge:app"
+storyforge = "storyforge.StoryForge:cli_entry"
+sf = "storyforge.StoryForge:cli_entry"
 
 [build-system]
 requires = ["setuptools>=45", "wheel"]
