--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,8 @@ dependencies = [
     "typer>=0.9.0",
     "rich>=13.0.0",
     "platformdirs>=4.2.0",
-    "pyyaml>=6.0.0"
+    "pyyaml>=6.0.0",
+    "mcp>=1.0.0"
 ]
 
 [project.urls]
