--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "pytest>=8.2.0",
+    "pytest-asyncio>=1.3.0",
     "pytest-cov>=4.1.0",
     "coverage>=7.5.0",
     "ruff>=0.12.1",
